[package]
name = "since"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
dirs = "5.0"
chrono-tz = "0.8"
dialoguer = "0.11"
colored = "2.1"
